# ClamHub

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  TEAM.md  mise.toml
.claude/tasks/clamhub-dev/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
.claude/teams/clamhub-dev/: config.json
.moon/: toolchain.yml  workspace.yml
agent/: Cargo.toml  moon.yml
agent/src/: main.rs
docs/: install-clamav.md
hub/: Cargo.toml  check_output.txt  moon.yml
hub/src/: main.rs
proto/: Cargo.toml  build.rs  moon.yml
proto/proto/: clamhub.proto
proto/src/: lib.rs
web/: moon.yml  package-lock.json  package.json
web/src/: App.jsx  api.js  index.css
web/src/components/: AgentList.jsx  Layout.jsx
web/src/pages/: Agents.jsx  Dashboard.jsx  Logs.jsx  Scans.jsx
