[package]
name = "clamhub-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
clamhub-proto = { path = "../proto" }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
